--- a/release/src-rt/Makefile
+++ b/release/src-rt/Makefile
@@ -818,7 +818,12 @@ define RouterOptions
 	elif [ "$(APP)" = "network" ]; then \
 		sed -i "/RTCONFIG_APP_NETINSTALLED/d" $(1); \
 		echo "RTCONFIG_APP_NETINSTALLED=y" >>$(1); \
- 	fi; \
+        elif [ "$(APP)" = "nolocaldm" ] ; then \
+                sed -i "/RTCONFIG_APP_NETINSTALLED/d" $(1); \
+                echo "RTCONFIG_APP_NETINSTALLED=y" >>$(1); \
+                sed -i "/RTCONFIG_APP_NOLOCALDM/d" $(1); \
+                echo "RTCONFIG_APP_NOLOCALDM=y" >>$(1); \
+	fi; \
 	if [ "$(STRACE)" = "y" ] ; then \
 		sed -i "/RTCONFIG_STRACE/d" $(1); \
 		echo "RTCONFIG_STRACE=y" >>$(1); \
