--- a/release/src/router/config/config.in
+++ b/release/src/router/config/config.in
@@ -355,6 +355,11 @@ config RTCONFIG_DNSMASQ
 	bool "Dnsmasq"
 	default y
 
+config RTCONFIG_APP_NOLOCALDM
+	bool "Apps are preinstalled except for Downloadmaster"
+	depends on RTCONFIG_APP_NETINSTALLED
+	default n
+
 config RTCONFIG_RALINK
 	bool "Ralink Chip Support"
 	default n
