Correct .gitgnore invalid line

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 release/src/router/pptpd/Makefile
 release/src/router/pptpd/config.log
 release/src/router/pptpd/config.status
-release/src/router/avahi-0.6.31/*
-release/src/router/avahi-0.6.31/**/*
+release/src/router/avahi-0.6.31/
