--- a/release/src/router/minidlna/Makefile
+++ b/release/src/router/minidlna/Makefile
@@ -57,6 +57,11 @@ ifeq ($(RTN65U), y)
 	CFLAGS += -DRTN56U
 endif
 
+ifeq ($(RTAC66U),y)
+	CFLAGS += -DRTN66U
+endif
+
+
 INSTALLPREFIX ?= $(DESTDIR)/usr
 SBININSTALLDIR = $(INSTALLPREFIX)/sbin
 ETCINSTALLDIR = $(DESTDIR)/etc
