--- a/release/src/router/igmpproxy/.gitignore
+++ b/release/src/router/igmpproxy/.gitignore
@@ -6,6 +6,7 @@
 *.d
 stamp-h1
 Makefile
+Makefile.in
 config.h
 config.log
 config.status
@@ -16,4 +17,5 @@ src/Makefile
 src/igmpproxy
 src/os.h
 autom4te.cache
+aclocal.m4
 
