--- a/release/src/router/rc/Makefile
+++ b/release/src/router/rc/Makefile
@@ -1,6 +1,6 @@
 include ../common.mak
 
-CFLAGS += -Wall -Os $(EXTRACFLAGS)
+CFLAGS += -Wall -O2 $(EXTRACFLAGS)
 CFLAGS += -I. -I$(TOP)/shared -I$(SRCBASE)/include -idirafter$(LINUXDIR)/include
 CFLAGS += -I$(TOP)/openssl/include
 CFLAGS += -I$(TOP)/push_log
