--- a/release/src/router/miniupnpd/Makefile.merlin
+++ b/release/src/router/miniupnpd/Makefile.merlin
@@ -71,8 +71,14 @@ ifeq ($(TEST), 1)
 CFLAGS := $(CFLAGS) -DIPTABLES_143
 # the following sucks, but works
 LIBS = $(IPTABLESPATH)/libiptc/.libs/libip4tc.o
+ifeq ($(RTCONFIG_IPV6), y)
+LIBS += $(IPTABLESPATH)/libiptc/.libs/libip6tc.o
+endif
 else	# ifeq ($(TEST), 1)
 LIBS = $(IPTABLESPATH)/libiptc/libiptc.a
+ifeq ($(RTCONFIG_IPV6), y)
+LIBS += $(IPTABLESPATH)/libiptc/libip6tc.a
+endif
 endif	# ifeq ($(TEST), 1)
 else	#ifdef IPTABLESPATH
 
