--- a/release/src/router/openssl/.gitignore
+++ b/release/src/router/openssl/.gitignore
@@ -62,6 +62,8 @@ libssl.pc
 libssl.so.1.0.0
 openssl.pc
 crypto/*/*.S
+crypto/*/*.s
 certs/demo/.0
 include/openssl/rc5.h
+crypto/opensslconf.h
 rehash.time
