minidlna: (backport) fix icon for N66

--- a/release/src/router/minidlna/Makefile
+++ b/release/src/router/minidlna/Makefile
@@ -57,7 +57,7 @@ ifeq ($(RTN65U), y)
 	CFLAGS += -DRTN56U
 endif
 
-ifeq ($(RTAC66U),y)
+ifeq ($(or $(RTN66U),$(RTAC66U)),y)
 	CFLAGS += -DRTN66U
 endif
 
