openssl: update .gitignore for symlinks

--- a/release/src/router/openssl/.gitignore
+++ b/release/src/router/openssl/.gitignore
@@ -64,6 +64,6 @@ openssl.pc
 crypto/*/*.S
 crypto/*/*.s
 certs/demo/.0
-include/openssl/rc5.h
+include/openssl/*.h
 crypto/opensslconf.h
 rehash.time
