openvpn: Add a 2048-bit DH PEM, taken from RFC 3526

--- a/release/src/router/rom/Makefile
+++ b/release/src/router/rom/Makefile
@@ -73,6 +73,10 @@ else
 endif
 #	cp -f others/usbtest.sh $(INSTALLDIR)/usr/sbin/usbtest.sh
 
+ifeq ($(RTCONFIG_OPENVPN),y)
+	cp -f others/dh2048.pem	 $(INSTALLDIR)/rom/dh2048.pem
+endif
+
 	# remove comments, compress whitespace
 	sed 's/#.*//g;s/[ \t]\+/ /g;s/^[ \t]*//;s/[ \t]*$$//;/^$$/d' < rom/etc/services > $(INSTALLDIR)/rom/etc/services
 	sed 's/#.*//g;s/[ \t]\+/ /g;s/^[ \t]*//;s/[ \t]*$$//;/^$$/d' < rom/etc/protocols > $(INSTALLDIR)/rom/etc/protocols
