--- a/release/src/router/openssl/test/.gitignore
+++ b/release/src/router/openssl/test/.gitignore
@@ -33,10 +33,10 @@ sha512t
 shatest
 ssltest
 wp_test
-constant_time_test
 
 srptest
 v3nametest
 heartbeat_test
 evp_extra_test
 constant_time_test
+verify_extra_test
