iptables: Added userspace NOTRACK library (MIPS)
Conflicts:

	release/src/router/iptables/extensions/Makefile

--- a/release/src/router/iptables/extensions/Makefile
+++ b/release/src/router/iptables/extensions/Makefile
@@ -9,7 +9,7 @@
 #PF6_EXT_SLIB:=connmark eui64 hl icmp6 length limit mac mark multiport owner physdev policy standard state tcp udp CONNMARK HL LOG NFQUEUE MARK TRACE
 
 
-PF_EXT_SLIB:=CLASSIFY CONNMARK DNAT DSCP LOG MARK MASQUERADE REDIRECT REJECT
+PF_EXT_SLIB:=CLASSIFY CONNMARK DNAT DSCP LOG MARK MASQUERADE REDIRECT REJECT NOTRACK
 PF_EXT_SLIB+=ROUTE SNAT TCPMSS TOS TRIGGER TTL NETMAP
 PF_EXT_SLIB+=condition connlimit connmark icmp iprange 
 PF_EXT_SLIB+=length limit mac mark multiport recent standard state quota
