--- a/release/src-rt/Makefile
+++ b/release/src-rt/Makefile
@@ -724,6 +724,10 @@ define RouterOptions
 			sed -i "/RTCONFIG_WEBDAV/d" $(1); \
 			echo "RTCONFIG_WEBDAV=y" >>$(1); \
 		fi; \
+		if [ "$(DNSSEC)" = "y" ]; then \
+			sed -i "/RTCONFIG_DNSSEC/d" $(1); \
+			echo "RTCONFIG_DNSSEC=y" >>$(1); \
+		fi; \
 		if [ "$(HTTPS)" = "y" ]; then \
 			sed -i "/RTCONFIG_HTTPS/d" $(1); \
 			echo "RTCONFIG_HTTPS=y" >>$(1); \
