--- a/release/src/router/config/config.in
+++ b/release/src/router/config/config.in
@@ -251,6 +251,10 @@ config RTCONFIG_NFS
 	depends on RTCONFIG_USB
 	default n
 
+config RTCONFIG_DNSSEC
+	bool "dnsmasq: Enable DNSSEC support"
+	default n
+
 config RTCONFIG_USB_EXTRAS
 	bool "Additional modules and utilities"
 	depends on RTCONFIG_USB
