git: update tracked files for nettle

--- a/release/src/router/nettle/.gitignore
+++ b/release/src/router/nettle/.gitignore
@@ -18,6 +18,7 @@ bin/
 config.h
 config.m4
 config.make
+configure
 desdata
 ecc-192-modp.asm
 ecc-192.h
@@ -62,3 +63,4 @@ tools/sexp-conv
 twofishdata
 nettle.html
 nettle.info
+autom4te.cache/
