openvpn: update to 2.3.12

--- a/release/src/router/openvpn/.gitignore
+++ b/release/src/router/openvpn/.gitignore
@@ -51,8 +51,7 @@ config-msvc-local.h
 config-msvc-version.h
 doc/openvpn.8.html
 distro/rpm/openvpn.spec
-tests/t_client.sh
-tests/t_client-*-20??????-??????/
+tests
 src/openvpn/openvpn
 config-version.h
 nbproject
