--- a/release/src/router/APP-IPK/ftpclient-ipk/CONTROL/control
+++ b/release/src/router/APP-IPK/ftpclient-ipk/CONTROL/control
@@ -1,14 +1,14 @@
-Package: webdavclient
+Package: ftpclient
 Architecture: mipsel
 Priority: optional
 Section: net
-Version: 1.0.0.9.0.g5dc2869
+Version: 1.0.0.1.0.g4626812
 OptionalUtility:
 Maintainer: ASUS
-Source: http://127.0.0.1/
+Source: http://nw-dlcdnet.asus.com/asusware/mipsel/stable
 URL: http://www.asusnetwork.net/cloud_sync.asp
 Description: Cloud client
-Depends: inotify,openssl,libxml2,zlib
+Depends: inotify,libcurl,openssl,libxml2,zlib,libuclibc++
 Suggests: 
 Conflicts: 
 Enabled: yes
