--- a/release/src/router/APP-IPK/dropbox-ipk/CONTROL/control
+++ b/release/src/router/APP-IPK/dropbox-ipk/CONTROL/control
@@ -1,14 +1,13 @@
-Package: smartsync
+Package: dropboxclient
 Architecture: mipsel
 Priority: optional
 Section: net
-Version: 1.0.0.12.0.gf3cf217
-OptionalUtility:
+Version: 1.0.0.1.0.g4626812
 Maintainer: ASUS
 Source: http://nw-dlcdnet.asus.com/asusware/mipsel/stable
-URL: http://www.asusnetwork.net/cloud_sync.asp
-Description: Cloud client
-Depends: 
+URL: 
+Description: dropbox client sync
+Depends: uclibc-opt,inotify,libcurl,openssl
 Suggests: 
 Conflicts: 
 Enabled: yes
