--- a/release/src/router/dhcpv6/Makefile.in
+++ b/release/src/router/dhcpv6/Makefile.in
@@ -97,11 +97,11 @@ getaddrinfo.o:	$(srcdir)/missing/getaddrinfo.c
 getnameinfo.o:	$(srcdir)/missing/getnameinfo.c
 	$(CC) -c $(srcdir)/missing/$*.c
 strlcat.o:	$(srcdir)/missing/strlcat.c
-	$(CC) -c $(srcdir)/missing/$*.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $(srcdir)/missing/$*.c
 strlcpy.o:	$(srcdir)/missing/strlcpy.c
-	$(CC) -c $(srcdir)/missing/$*.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $(srcdir)/missing/$*.c
 arc4random.o:	$(srcdir)/missing/arc4random.c
-	$(CC) $(CFLAGS) -c $(srcdir)/missing/$*.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $(srcdir)/missing/$*.c
 getifaddrs.o:	$(srcdir)/missing/getifaddrs.c
 	$(CC) $(CFLAGS) -c $(srcdir)/missing/$*.c
 daemon.o:	$(srcdir)/missing/daemon.c
@@ -114,7 +114,7 @@ $(srcdir)/ianaopts.h: gentab.pl bootp-dhcp-parameters
 
 install::
 	-mkdir -p $(sbindir) $(mandir)/man5 $(mandir)/man8
-	$(INSTALL_PROGRAM) -s -o $(user) -g $(group) $(TARGET) $(sbindir)
+	$(INSTALL_PROGRAM) -o $(user) -g $(group) $(TARGET) $(sbindir)
 	$(INSTALL_DATA) -o $(user) -g $(group) dhcp6c.8 $(mandir)/man8
 	$(INSTALL_DATA) -o $(user) -g $(group) dhcp6s.8 $(mandir)/man8
 	$(INSTALL_DATA) -o $(user) -g $(group) dhcp6relay.8 $(mandir)/man8
