ipset_arm: (backport) provide a modprobe.conf file with the list of module aliases used by ipset6 mapping modules

--- a/release/src/router/rom/Makefile
+++ b/release/src/router/rom/Makefile
@@ -91,6 +91,10 @@ else
 	rm -f $(INSTALLDIR)/rom/etc/openssl.cnf
 endif
 
+ifneq ($(RTCONFIG_BCMARM),y)
+	rm -f $(INSTALLDIR)/rom/etc/modprobe.conf
+endif
+
 ifeq ($(RTCONFIG_DUALWAN),y)
 	cp -rf rom/etc/static_routes $(INSTALLDIR)/rom/etc/
 endif
