--- a/release/src/router/dnscrypt/Makefile.in
+++ b/release/src/router/dnscrypt/Makefile.in
@@ -195,7 +195,7 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 CSCOPE = cscope
-DIST_SUBDIRS = dist-build man libltdl src test
+DIST_SUBDIRS = dist-build man libltdl contrib src test
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(srcdir)/dnscrypt-update-resolvers.sh.in \
 	$(top_srcdir)/libltdl/config/compile \
@@ -338,7 +338,6 @@ SAFECODE_HOME = @SAFECODE_HOME@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
-SIXJACK = @SIXJACK@
 STRIP = @STRIP@
 SYSTEMD_CFLAGS = @SYSTEMD_CFLAGS@
 SYSTEMD_DAEMON_CFLAGS = @SYSTEMD_DAEMON_CFLAGS@
@@ -411,12 +410,13 @@ EXTRA_DIST = \
 	THANKS \
 	apparmor.profile.dnscrypt-proxy \
 	autogen.sh \
+	dnscrypt-proxy.conf \
 	dnscrypt-proxy.service \
 	dnscrypt-proxy.socket \
 	org.dnscrypt.osx.DNSCryptProxy.plist \
 	resolvers-check.sh
 
-SUBDIRS = dist-build man $(am__append_1) src test
+SUBDIRS = dist-build man $(am__append_1) contrib src test
 dist_pkgdata_DATA = \
 	dnscrypt-resolvers.csv \
 	minisign.pub
@@ -863,7 +863,7 @@ info: info-recursive
 
 info-am:
 
-install-data-am: install-dist_pkgdataDATA
+install-data-am: install-data-local install-dist_pkgdataDATA
 
 install-dvi: install-dvi-recursive
 
@@ -909,7 +909,7 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-dist_pkgdataDATA
+uninstall-am: uninstall-dist_pkgdataDATA uninstall-local
 
 .MAKE: $(am__recursive_targets) all install-am install-strip
 
@@ -921,17 +921,32 @@ uninstall-am: uninstall-dist_pkgdataDATA
 	distclean-hdr distclean-libtool distclean-tags distcleancheck \
 	distdir distuninstallcheck dvi dvi-am html html-am info \
 	info-am install install-am install-data install-data-am \
-	install-dist_pkgdataDATA install-dvi install-dvi-am \
-	install-exec install-exec-am install-html install-html-am \
-	install-info install-info-am install-man install-pdf \
-	install-pdf-am install-ps install-ps-am install-strip \
-	installcheck installcheck-am installdirs installdirs-am \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags tags-am uninstall uninstall-am uninstall-dist_pkgdataDATA
+	install-data-local install-dist_pkgdataDATA install-dvi \
+	install-dvi-am install-exec install-exec-am install-html \
+	install-html-am install-info install-info-am install-man \
+	install-pdf install-pdf-am install-ps install-ps-am \
+	install-strip installcheck installcheck-am installdirs \
+	installdirs-am maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
+	ps ps-am tags tags-am uninstall uninstall-am \
+	uninstall-dist_pkgdataDATA uninstall-local
 
 .PRECIOUS: Makefile
 
+
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(sysconfdir); \
+	if [ ! -f $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf ]; then \
+		$(INSTALL_DATA) $(srcdir)/dnscrypt-proxy.conf $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf; \
+	fi; \
+	$(INSTALL_DATA) $(srcdir)/dnscrypt-proxy.conf $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf.example
+
+uninstall-local:
+	if cmp -s $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf $(srcdir)/dnscrypt-proxy.conf; then \
+		echo "$(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf is not changed and will be removed."; \
+		rm -f $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf; \
+	fi; \
+	rm -f $(DESTDIR)$(sysconfdir)/dnscrypt-proxy.conf.example
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
