--- a/release/src/router/dnscrypt/configure.ac
+++ b/release/src/router/dnscrypt/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ([2.65])
-AC_INIT([dnscrypt-proxy],[1.7.0],[https://dnscrypt.org])
+AC_INIT([dnscrypt-proxy],[1.9.0],[https://dnscrypt.org])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([libltdl/config])
 AC_CONFIG_SRCDIR([src/proxy/app.c])
@@ -14,6 +14,7 @@ AC_SUBST(VERSION)
 ISODATE=`date +%Y-%m-%d`
 AC_SUBST(ISODATE)
 
+AC_LANG_ASSERT(C)
 LX_CFLAGS=${CFLAGS-NONE}
 
 dnl Switches.
@@ -134,19 +135,14 @@ AX_CHECK_COMPILE_FLAG([-D_FORTIFY_SOURCE=2],
   [CPPFLAGS="$CPPFLAGS -D_FORTIFY_SOURCE=2"])
 
 AS_CASE([$host_os], [cygwin*|mingw*|msys|pw32*|cegcc*], [ ], [
-  AX_CHECK_COMPILE_FLAG([-fPIC], [
-    AX_CHECK_LINK_FLAG([-fPIC],
-      [CFLAGS="$CFLAGS -fPIC"]
-    )
-  ])
+  AX_CHECK_COMPILE_FLAG([-fPIC], [CFLAGS="$CFLAGS -fPIC"])
 ])
 
 AS_IF([test "$enable_pie" != "no"],[
   AX_CHECK_COMPILE_FLAG([-fPIE], [
-    AX_CHECK_LINK_FLAG([-fPIE],
-      [AX_CHECK_LINK_FLAG([-pie],
-        [CFLAGS="$CFLAGS -fPIE"
-         LDFLAGS="$LDFLAGS -pie"])
+    AX_CHECK_LINK_FLAG([-pie], [
+      [CFLAGS="$CFLAGS -fPIE"
+       LDFLAGS="$LDFLAGS -pie"]
     ])
   ])
 ])
@@ -168,18 +164,15 @@ AS_IF([test "x$enable_ssp" != "xno"],[
 AS_CASE([$host_os],
   [cygwin* | mingw* | pw32* | cegcc*], [ ],
   [dragonfly*], [
-    AX_CHECK_COMPILE_FLAG([-fstack-protector], [
-      AX_CHECK_LINK_FLAG([-fstack-protector],
-        [CFLAGS="$CFLAGS -fstack-protector"]
-      )
-    ])
+    AX_CHECK_COMPILE_FLAG([-fstack-protector],
+      [CFLAGS="$CFLAGS -fstack-protector"])
   ],
   [*], [
-    AX_CHECK_COMPILE_FLAG([-fstack-protector-all], [
-      AX_CHECK_LINK_FLAG([-fstack-protector-all],
-        [CFLAGS="$CFLAGS -fstack-protector-all"]
-      )
-    ])
+    AX_CHECK_COMPILE_FLAG([-fstack-protector-strong],
+     [CFLAGS="$CFLAGS -fstack-protector-strong"],
+     [AX_CHECK_COMPILE_FLAG([-fstack-protector-all],
+       [CFLAGS="$CFLAGS -fstack-protector-all"])]
+    )
   ])
 ])
 
@@ -234,9 +227,6 @@ AC_SUBST(LIBTOOL_DEPS)
 AC_ARG_VAR([RONN], [path to the ronn text processor])
 AC_PATH_PROG([RONN], [ronn], [#])
 
-AC_ARG_VAR([SIXJACK], [path to 6jack])
-AC_PATH_PROG([SIXJACK], [sixjack], [#])
-
 AC_ARG_VAR([AR], [path to the ar utility])
 AC_CHECK_TOOL([AR], [ar], [ar])
 
@@ -262,9 +252,23 @@ AC_SUBST([PROBES_SOURCE])
 AS_IF([test -d /usr/local/include], [
   CPPFLAGS="$CPPFLAGS -I/usr/local/include"
 ])
-
 AS_IF([test -d /usr/local/lib], [
   LDFLAGS="$LDFLAGS -L/usr/local/lib"
+])
+
+AS_IF([test -d /usr/local/opt/libressl/include], [
+  CPPFLAGS="$CPPFLAGS -I/usr/local/opt/libressl/include"
+], [
+  AS_IF([test -d /usr/local/opt/openssl/include], [
+    CPPFLAGS="$CPPFLAGS -I/usr/local/opt/openssl/include"
+  ])
+])
+AS_IF([test -d /usr/local/opt/libressl/lib], [
+  LDFLAGS="$LDFLAGS -L/usr/local/opt/libressl/lib"
+], [
+  AS_IF([test -d /usr/local/opt/openssl/lib], [
+    LDFLAGS="$LDFLAGS -L/usr/local/opt/openssl/lib"
+  ])
 ])
 
 dnl Checks for header files.
@@ -437,10 +441,8 @@ case $host_os in
   ;;
 esac
 
-AC_CHECK_HEADER([CoreServices/CoreServices.h],
-  [LIBS="$LIBS -framework CoreFoundation -framework CoreServices"])
-
 AC_CHECK_FUNCS([getpwnam sandbox_init setrlimit putc_unlocked gmtime_r initgroups])
+AC_CHECK_FUNCS([crypto_box_easy_afternm crypto_core_hchacha20 crypto_box_curve25519xchacha20poly1305_open_easy_afternm])
 
 dnl Libtool.
 
@@ -475,6 +477,7 @@ AH_VERBATIM([NDEBUG], [/* Never ever ignore assertions */
 #endif])
 
 AC_CONFIG_FILES([Makefile
+                 contrib/Makefile
                  dist-build/Makefile
                  dnscrypt-update-resolvers.sh
                  man/Makefile
@@ -486,11 +489,13 @@ AC_CONFIG_FILES([Makefile
                  src/include/dnscrypt/version.h
                  src/plugins/Makefile
                  src/plugins/example/Makefile
+                 src/plugins/example-cache/Makefile
                  src/plugins/example-logging/Makefile
                  src/plugins/example-ldns-aaaa-blocking/Makefile
                  src/plugins/example-ldns-blocking/Makefile
-                 src/plugins/example-ldns-opendns-deviceid/Makefile
-                 src/plugins/example-ldns-opendns-set-client-ip/Makefile
+                 src/plugins/example-ldns-forwarding/Makefile
+                 src/plugins/vendor-specific/example-ldns-opendns-deviceid/Makefile
+                 src/plugins/vendor-specific/example-ldns-opendns-set-client-ip/Makefile
                  test/Makefile])
 
 AC_OUTPUT
