--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -2632,15 +2632,13 @@ openpam-clean:
 
 openvpn/stamp-h1: lzo zlib nvram
 	cd openvpn && ./autogen.sh && \
-	export OPENSSL_CRYPTO_CFLAGS="-I$(TOP)/openssl/include"; \
-	export OPENSSL_CRYPTO_LIBS="-L$(TOP)/openssl -lcrypto"; \
-	export OPENSSL_SSL_CFLAGS="-I$(TOP)/openssl/include"; \
-	export OPENSSL_SSL_LIBS="-L$(TOP)/openssl -lssl"; \
-	CFLAGS="-O3 -Wall $(EXTRACFLAGS) -ffunction-sections -fdata-sections $(if $(RTCONFIG_HTTPS),-I$(TOP)/openssl/include/openssl) -std=gnu99" \
+	export OPENSSL_CFLAGS="-I$(TOP)/openssl"; \
+	export OPENSSL_LIBS="-L$(TOP)/openssl -lcrypto -lssl"; \
+	CFLAGS="-O3 -Wall $(EXTRACFLAGS) -ffunction-sections -fdata-sections $(if $(RTCONFIG_HTTPS),-I$(TOP)/openssl/include) $(if $(RTCONFIG_BCMARM),,-std=gnu99)" \
 	LDFLAGS="$(EXTRALDFLAGS) -L$(TOP)/nvram$(BCMEX) -lnvram -L$(TOP)/shared -lshared $(if $(RTCONFIG_QTN),-L$(TOP)/libqcsapi_client -lqcsapi_client) -L$(TOP)/zlib -lz -L$(TOP)/lzo/src/.libs -L$(TOP)/openpam/lib/libpam/.libs -ffunction-sections -fdata-sections -Wl,--gc-sections" \
 	CPPFLAGS="-I$(TOP)/lzo/include -I$(TOP)/openpam/include -I$(TOP)/shared -I$(SRCBASE)/include" \
-	IPROUTE="/usr/sbin/ip" \
-	$(CONFIGURE) --prefix=  --enable-iproute2 \
+	IPROUTE="/usr/sbin/ip" IFCONFIG="/sbin/ifconfig" ROUTE="/sbin/route" \
+	$(CONFIGURE) --prefix=/usr --bindir=/usr/sbin --libdir=/usr/lib  --enable-iproute2 \
 	--disable-debug --enable-management --disable-small \
 	--disable-selinux --disable-socks \
 	--enable-plugin-auth-pam \
