build: (backport) openssl now requires makedepend to be installed - pkg xutils-dev

--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -1130,7 +1130,7 @@ openssl/stamp-h1:
 #	no-zlib no-engine no-engines no-sse2 no-perlasm \
 #	no-dtls1 no-store no-psk no-md2 no-mdc2 no-ts
 
-	-@$(MAKE) -C openssl clean
+	-@$(MAKE) -C openssl clean depend
 	@touch $@
 
 openssl: openssl/stamp-h1
