wget: disable gettext checking

--- a/release/src/router/wget/configure.ac
+++ b/release/src/router/wget/configure.ac
@@ -184,7 +184,7 @@ dnl
 dnl Gettext
 dnl
 AM_GNU_GETTEXT([external],[need-ngettext])
-AM_GNU_GETTEXT_VERSION([0.18.1])
+dnl AM_GNU_GETTEXT_VERSION([0.18.1])
 
 AC_PROG_RANLIB
 
